--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -163,7 +163,7 @@
             <div class="list">
                 <div class="item">
                     <div class="img-item">
-                        <img src="./images/features2.jpg" alt="">
+                        <img src="./assets/images/features2.jpg" alt="">
                     </div>
 
                     <div class="element">
@@ -175,7 +175,7 @@
 
                 <div class="item">
                     <div class="img-item">
-                        <img src="./images/features1.jpg" alt="">
+                        <img src="./assets/images/features1.jpg" alt="">
                     </div>
 
                     <div class="element">
@@ -187,7 +187,7 @@
 
                 <div class="item">
                     <div class="img-item">
-                        <img src="./images/mbr-2.jpg" alt="">
+                        <img src="./assets/images/mbr-2.jpg" alt="">
                     </div>
 
                     <div class="element">
@@ -199,7 +199,7 @@
 
                 <div class="item">
                     <div class="img-item">
-                        <img src="./images/product1.jpg" alt="">
+                        <img src="./assets/images/product1.jpg" alt="">
                     </div>
 
                     <div class="element">
@@ -211,7 +211,7 @@
 
                 <div class="item">
                     <div class="img-item">
-                        <img src="./images/mbr-3.jpg" alt="">
+                        <img src="./assets/images/mbr-3.jpg" alt="">
                     </div>
 
                     <div class="element">
@@ -241,7 +241,7 @@
         <div class="box-center">
             <div class="watch">Watch Video</div>
             <div class="video">
-                <img src="./images/background2.jpg" alt="">
+                <img src="./assets/images/background2.jpg" alt="">
                 <i class="fa-solid fa-circle-play"></i>
             </div>
         </div>
