--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="neo-bar">
                     <div class="logo-name">
                         <div class="logo">
-                            <img src="./images/logo.png" alt="">
+                            <img src="./assets/images/ogo.png" alt="">
                         </div>
                         <div class="brand">CureM4</div>
                     </div>
