--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="element-2">
                 <div class="price-product">
-                    <img src="./images/product1.jpg" alt="">
+                    <img src="./assets/images/product1.jpg" alt="">
                     <div class="price">
                         only<span>$25</span>
                     </div>
