--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
 
             <div class="element-2">
-                <img src="./images/features1.jpg" alt="">
+                <img src="./assets/images/features1.jpg" alt="">
             </div>
         </div>
     </div>
